--- a/project.html
+++ b/project.html
@@ -14,5 +14,13 @@
         <ul id="taskList"></ul>
     </div>
     <script src="script.js"></script>
+    <footer>
+        &copy;<span id="year"></span> | Project | CSE 121b
+      </footer>
+      <script src="scripts/main.js"></script>
+      <script>
+        document.getElementById("year").innerHTML = new Date().getFullYear();
+      </script>
+      <script src="scripts/w06-task.js"></script>
 </body>
 </html>
