fixed the to-do-list refresh error

--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
     </div>
     <script src="script.js"></script>
     <footer>
-        &copy;<span id="year"></span> | Project | CSE 121b
+        &copy;<span id="year"></span> | Project | Na Tang
       </footer>
       <script src="scripts/main.js"></script>
       <script>
