--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSE 121b | W05: Programming Tasks</title>
+  <title>Projects</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap"
@@ -16,16 +16,16 @@
   <nav>
     <ul id="menu">
       <li><a id="toggleMenu">&equiv;</a></li>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="w01-task.html">W1 Task</a></li>
-      <li><a href="w03-task.html">W3 Task</a></li>
-      <li><a href="w04-task.html">W4 Task</a></li>
-      <li><a href="w05-task.html" class="active">W5 Task</a></li>
+      <!-- <li><a href="index.html">Home</a></li> -->
+      <!-- <li><a href="w01-task.html">W1 Task</a></li> -->
+      <!-- <li><a href="w03-task.html">W3 Task</a></li> -->
+      <!-- <li><a href="w04-task.html">W4 Task</a></li> -->
+      <li><a href="projects.html" class="active">Project</a></li>
       <li><a href="project.html">Project</a></li>
     </ul>
   </nav>
   <main id="gridly">
-    <h1>W05: Programming Tasks</h1>
+    <h1>Project</h1>
     <h2>Fetch(): Some Latter-day Temples</h2>
 
     <select id="filtered" title="Choose a data filter.">
@@ -42,7 +42,7 @@
 
 
   <footer>
-    &copy;<span id="year"></span> | Week 05 - Fetching Temple Data | CSE 121b
+    &copy;<span id="year"></span> | Fetching Temple Data | Na Tang
   </footer>
   <script src="scripts/main.js"></script>
   <script>
